--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio - [Your Name]</title>
+    <title>Portfolio - Javier Rodríguez Lavandeira</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
@@ -11,7 +11,7 @@
     
     <header class="main-header">
         <div class="container">
-            <img src="your-photo.jpg" alt="Photo of [Your Name]" class="profile-photo">
+            <img src="images/Foto_Orla_comprimida.jpg" class="profile-photo">
             <h1>Javier Rodríguez Lavandeira</h1>
             <p>Software Developer | Computer Engineer</p>
             <p>Passionate about Augmented Reality, Virtual Reality, Compute Vision and Artificial Intelligence</p>
