--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <section id="about" class="section">
         <div class="container">
             <h2>About Me</h2>
-            <p>I am a computer engineer with experience in software development and a strong focus on emerging technologies like VR, AR, and Machine Learning. My goal is to create innovative solutions that combine creativity and technology.</p>
+            <p>I am a computer engineer with experience in software development and a strong focus on emerging technologies like VR, AR, and Machine Learning. My goal is to create innovative solutions that combine creativity and technology. I am currently studying a postgraduate degree in Virtual and Augmented Reality at Goldsmiths University in London</p>
         </div>
     </section>
 
@@ -39,6 +39,13 @@
         <div class="container">
             <h2>Education</h2>
             <div class="education-item">
+                <div class="education-content">
+                    <h3>Postgraduate Degree in Virtual and Augmented Reality</h3>
+                    <p><strong>Goldsmiths University</strong></p>
+                    <p>Graduation Year: 2026</p>
+                    <p>Grades average based on Base 10 Scale: <strong>-</strong></p>
+                    <p>Relevant Coursework: Game Development, AR, VR, Modelling</p>
+                </div>
                 <div class="education-content">
                     <h3>Bachelor's Degree in Computer Engineering</h3>
                     <p><strong>Universidade da Coruña</strong></p>
@@ -219,3 +226,4 @@
     </footer>
 </body>
 </html>
+
