--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
                     <p>Grades average based on Base 10 Scale: <strong>-</strong></p>
                     <p>Relevant Coursework: Game Development, AR, VR, Modelling</p>   
                 </div>
+                
+            </div>
+            <div class="education-item">
                 <div class="education-content">
                     <h3>Bachelor's Degree in Computer Engineering</h3>
                     <p><strong>Universidade da Coruña</strong></p>
@@ -226,5 +229,6 @@
     </footer>
 </body>
 </html>
+
 
 
